@@ -1,3 +1,7 @@
+2011-02-19 Niels Grewe <niels.grewe@halbordnung.de>
+
+	* Source/DKArgument.m: Be more verbose when failing assertions.
+
 2011-02-18 Niels Grewe <niels.grewe@halbordnung.de>
 
 	* Source/DKEndpointManager.h
